cdk/cdk.out/fargate-demo-frontend.template.json
{
  "Resources": {
    "FrontendFargateLBServiceLoggingLogGroup3A3DEB01": {
      "Type": "AWS::Logs::LogGroup",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/Logging/LogGroup/Resource"
      }
    },
    "FrontendFargateLBServiceLB58D972C7": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "FrontendFargateLBServiceLBSecurityGroup49C30F65",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCPublicSubnet1Subnet3A607EE280E4A625"
          },
          {
            "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCPublicSubnet2Subnet1115E1D2CAE9B681"
          },
          {
            "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCPublicSubnet3SubnetB9BB692AC72035F8"
          }
        ],
        "Type": "application"
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/LB/Resource"
      }
    },
    "FrontendFargateLBServiceLBSecurityGroup49C30F65": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB fargatedemofrontendFrontendFargateLBServiceLB11AF621F",
        "SecurityGroupEgress": [],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCD45965B8DA8F2037"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/LB/SecurityGroup/Resource"
      }
    },
    "FrontendFargateLBServiceLBSecurityGrouptofargatedemofrontendFrontendFargateLBServiceSecurityGroup49C752093000626A43F8": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceLBSecurityGroup49C30F65",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceSecurityGroupD8FC4711",
            "GroupId"
          ]
        },
        "FromPort": 3000,
        "ToPort": 3000
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/LB/SecurityGroup/to fargatedemofrontendFrontendFargateLBServiceSecurityGroup49C75209:3000"
      }
    },
    "FrontendFargateLBServiceLBPublicListener536473EE": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "FrontendFargateLBServiceLBPublicListenerECSGroup84B65405"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "FrontendFargateLBServiceLB58D972C7"
        },
        "Port": 80,
        "Protocol": "HTTP",
        "Certificates": []
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/LB/PublicListener/Resource"
      }
    },
    "FrontendFargateLBServiceLBPublicListenerECSGroup84B65405": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [],
        "Targets": [],
        "TargetType": "ip",
        "VpcId": {
          "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCD45965B8DA8F2037"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "FrontendFargateLBServiceTaskDefTaskRoleB15649C5": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "ecs-tasks.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/TaskDef/TaskRole/Resource"
      }
    },
    "FrontendFargateLBServiceTaskDef4A760E09": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "CRYSTAL_URL",
                "Value": "http://ecsdemo-crystal.service:3000/crystal"
              },
              {
                "Name": "NODEJS_URL",
                "Value": "http://ecsdemo-nodejs.service:3000"
              }
            ],
            "Essential": true,
            "Image": "brentley/ecsdemo-frontend",
            "Links": [],
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "FrontendFargateLBServiceLoggingLogGroup3A3DEB01"
                },
                "awslogs-stream-prefix": "FrontendFargateLBService",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "MountPoints": [],
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 3000,
                "Protocol": "tcp"
              }
            ],
            "Ulimits": [],
            "VolumesFrom": []
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceTaskDefExecutionRole062B3EBD",
            "Arn"
          ]
        },
        "Family": "fargatedemofrontendFrontendFargateLBServiceTaskDefC747F090",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceTaskDefTaskRoleB15649C5",
            "Arn"
          ]
        },
        "Volumes": []
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/TaskDef/Resource"
      }
    },
    "FrontendFargateLBServiceTaskDefExecutionRole062B3EBD": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "ecs-tasks.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/TaskDef/ExecutionRole/Resource"
      }
    },
    "FrontendFargateLBServiceTaskDefExecutionRoleDefaultPolicy7E52740C": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FrontendFargateLBServiceLoggingLogGroup3A3DEB01",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "FrontendFargateLBServiceTaskDefExecutionRoleDefaultPolicy7E52740C",
        "Roles": [
          {
            "Ref": "FrontendFargateLBServiceTaskDefExecutionRole062B3EBD"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "FrontendFargateLBService5D4043A4": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "TaskDefinition": {
          "Ref": "FrontendFargateLBServiceTaskDef4A760E09"
        },
        "Cluster": {
          "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefECSCluster7D463CD47A8DFE2F"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 3,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 3000,
            "TargetGroupArn": {
              "Ref": "FrontendFargateLBServiceLBPublicListenerECSGroup84B65405"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "FrontendFargateLBServiceSecurityGroupD8FC4711",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCPrivateSubnet1SubnetF99B1DA5401F53D2"
              },
              {
                "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCPrivateSubnet2Subnet883344066E29E43B"
              },
              {
                "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCPrivateSubnet3Subnet3FD941A2DACCC782"
              }
            ]
          }
        },
        "ServiceRegistries": []
      },
      "DependsOn": [
        "FrontendFargateLBServiceLBPublicListenerECSGroup84B65405",
        "FrontendFargateLBServiceLBPublicListener536473EE"
      ],
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/Service/Service"
      }
    },
    "FrontendFargateLBServiceSecurityGroupD8FC4711": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "fargate-demo-frontend/FrontendFargateLBService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [],
        "VpcId": {
          "Fn::ImportValue": "fargate-demo-base:ExportsOutputRefBaseVPCD45965B8DA8F2037"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/Service/SecurityGroup/Resource"
      }
    },
    "FrontendFargateLBServiceSecurityGroupfromfargatedemofrontendFrontendFargateLBServiceLBSecurityGroup0E0AC4483000A649E736": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 3000,
        "GroupId": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceSecurityGroupD8FC4711",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceLBSecurityGroup49C30F65",
            "GroupId"
          ]
        },
        "ToPort": 3000
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/FrontendFargateLBService/Service/SecurityGroup/from fargatedemofrontendFrontendFargateLBServiceLBSecurityGroup0E0AC448:3000"
      }
    },
    "InboundBackendSecGrp3000": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "TCP",
        "FromPort": 3000,
        "GroupId": {
          "Fn::ImportValue": "fargate-demo-base:ExportsOutputFnGetAttFrontendToBackendSecurityGroup70D70E25GroupIdA0B24B47"
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceSecurityGroupD8FC4711",
            "GroupId"
          ]
        },
        "ToPort": 3000
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/InboundBackendSecGrp3000"
      }
    },
    "InboundFrontendtoBackendSecGrp3000": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "TCP",
        "FromPort": 3000,
        "GroupId": {
          "Fn::GetAtt": [
            "FrontendFargateLBServiceSecurityGroupD8FC4711",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::ImportValue": "fargate-demo-base:ExportsOutputFnGetAttFrontendToBackendSecurityGroup70D70E25GroupIdA0B24B47"
        },
        "ToPort": 3000
      },
      "Metadata": {
        "aws:cdk:path": "fargate-demo-frontend/InboundFrontendtoBackendSecGrp3000"
      }
    }
  },
  "Outputs": {
    "FrontendFargateLBServiceLoadBalancerDNSAFFB8F0B": {
      "Value": {
        "Fn::GetAtt": [
          "FrontendFargateLBServiceLB58D972C7",
          "DNSName"
        ]
      }
    }
  }
}
